# system-design-sbt

./: README.md  monitor.sh
hw2-ansible/: Dockerfile  Dockerfile_server  deploy.yml  docker-compose.yml
hw2-ansible/ansible/: servers.yaml
hw2-ansible/ansible/app/: main.py
hw2-ansible/ansible/app/templates/: index.html
hw2-ansible/flask/: Dockerfile.build  Dockerfile.prod  app.py  pyproject.toml  requirements.txt
hw2-ansible/nginx/: nginx.conf
hw3/: README.md  app.py  docker-compose.yml  requirements.txt
hw4/: Dockerfile  Dockerfile_alpine  Jenkinsfile  README.md  docker-compose.yml  pom.xml  pytest.ini  requirements.txt  sonar-project.properties
hw4/ansible/: ansible.cfg  deploy.yml  hosts.txt
hw4/app/: graph.py  main.py
hw4/tests/: requirements.txt  test_graph.py  test_main.py
hw5/: Dockerfile  README.md  app.py  docker-compose.yml  init.sql
hw5/k8s/: app-deployment.yaml  app-service.yaml  configmap.yaml  postgres-deployment.yaml  postgres-init-configmap.yaml  postgres-pv-pvc.yaml  secret.yaml
