[tool.poetry]
name = "flask_app"
version = "0.1.0"
description = "A simple Flask application that returns a greeting."
authors = ["agarkovv"]
license = "MIT"
readme = "README.md"
homepage = "https://agarkovv.com"
repository = "https://github.com/agarkovv/flask_app"
keywords = ["flask", "web", "application"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"